updated home page display and references

--- a/about.html
+++ b/about.html
@@ -86,6 +86,20 @@
                         <p class="education-detail">Full Language Immersion Study Abroad Program (Spoke exclusively in Mandarin Chinese)</p>
                     </div>
                 </div>
+
+                <div class="teaching-experience">
+                    <h3>Teaching Experience</h3>
+                    <div class="teaching-item">
+                        <h4>Yeshiva Ohr Yisrael High School for Boys</h4>
+                        <p>High School Teacher (2016-2017)</p>
+                        <ul class="teaching-responsibilities">
+                            <li>AP Calculus Instructor</li>
+                            <li>Physics Enrichment Program Director</li>
+                            <li>Language Program Coordinator</li>
+                            <li>Gym Teacher</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
