--- a/contact.html
+++ b/contact.html
@@ -36,8 +36,12 @@
                                 <a href="mailto:mccourt.joseph@gmail.com">mccourt.joseph@gmail.com</a>
                             </div>
                             <div class="contact-item">
+                                <i class="fas fa-phone"></i>
+                                <a href="tel:6179108333">(617) 910-8333</a>
+                            </div>
+                            <div class="contact-item">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <span>Chicago, IL, USA</span>
+                                <span>Chicago, IL, 60657</span>
                             </div>
                             <div class="contact-item">
                                 <i class="fab fa-linkedin"></i>
