added interests section. adjusted some content as well.

--- a/research.html
+++ b/research.html
@@ -14,6 +14,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="research.html">Research</a></li>
+                <li><a href="interests.html">Interests</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
@@ -33,11 +34,15 @@
                     <h3>Research Interests</h3>
                     <ul>
                         <li>X-ray Physics</li>
+                        <li>Synchrotron</li>
                         <li>Soft Matter Physics</li>
                         <li>Computational Physics</li>
                         <li>Self Assembly</li>
                         <li>Molecular Dynamics</li>
                         <li>Ptychography</li>
+                        <li>Tomography</li>
+                        <li>Coherent Phase Retrieval</li>
+                        <li>Microscopy</li>
                         <li>Machine Learning</li>
                         <li>Imaging</li>
                     </ul>
