added mlb x demon slayer video

--- a/interests.html
+++ b/interests.html
@@ -59,6 +59,21 @@
                     </a>
                 </div>
                 
+                <div class="interest-card">
+                    <a href="https://youtu.be/olR2KeUBkew?feature=shared" target="_blank" rel="noopener noreferrer">
+                        <div class="interest-thumbnail">
+                            <img src="images/interests/mlb_demonslayer.png" alt="MLB x Demon Slayer">
+                        </div>
+                        <div class="interest-content">
+                            <h3>MLB x Demon Slayer: Shohei Ohtani</h3>
+                            <p class="interest-source">MLB YouTube Channel (2025)</p>
+                            <p class="interest-description">A collaboration between MLB and Demon Slayer anime animators featuring Shohei Ohtani in the distinctive Demon Slayer animation style.</p>
+                            <span class="interest-tag">Baseball</span>
+                            <span class="interest-tag">Anime</span>
+                        </div>
+                    </a>
+                </div>
+                
                 <!-- Add more cards as needed -->
             </div>
         </section>
