added gromacs interest

--- a/interests.html
+++ b/interests.html
@@ -94,6 +94,23 @@
                     </a>
                 </div>
                 
+                <!-- 2018 -->
+                <div class="interest-card">
+                    <a href="http://www.mdtutorials.com/gmx/" target="_blank" rel="noopener noreferrer">
+                        <div class="interest-thumbnail">
+                            <img src="images/interests/20180101_gromacsMD.png" alt="GROMACS Tutorials">
+                        </div>
+                        <div class="interest-content">
+                            <h3>GROMACS Tutorials</h3>
+                            <p class="interest-source">Justin A. Lemkul, Virginia Tech (2018)</p>
+                            <p class="interest-description">A great tutorial written by Justin A. Lemkul at Virginia Tech that helped me greatly when I first got started with molecular dynamics simulations. <a href="https://github.com/jalemkul/gmx_tutorials_livecoms" target="_blank" rel="noopener noreferrer" class="inline-link">GitHub repository</a></p>
+                            <span class="interest-tag">MD Simulations</span>
+                            <span class="interest-tag">Tutorials</span>
+                            <span class="interest-tag">GROMACS</span>
+                        </div>
+                    </a>
+                </div>
+                
                 <!-- Add more cards as needed -->
             </div>
         </section>
