--- a/research.html
+++ b/research.html
@@ -157,5 +157,49 @@
     <footer>
         <p>&copy; 2025 McCourt Physics. All rights reserved.</p>
     </footer>
+
+    <!-- Hamburger Menu Button -->
+    <div class="hamburger-menu">
+        <div class="hamburger-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+
+    <!-- Mobile Navigation -->
+    <nav class="mobile-nav">
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="research.html">Research</a></li>
+            <li><a href="interests.html">Interests</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function() {
+            // Hamburger menu functionality
+            const hamburger = document.querySelector('.hamburger-icon');
+            const mobileNav = document.querySelector('.mobile-nav');
+            
+            hamburger.addEventListener('click', function() {
+                this.classList.toggle('open');
+                mobileNav.classList.toggle('open');
+                document.body.classList.toggle('no-scroll');
+            });
+            
+            // Close menu when clicking on a link
+            const navLinks = document.querySelectorAll('.mobile-nav a');
+            navLinks.forEach(link => {
+                link.addEventListener('click', function() {
+                    hamburger.classList.remove('open');
+                    mobileNav.classList.remove('open');
+                    document.body.classList.remove('no-scroll');
+                });
+            });
+        });
+    </script>
 </body>
 </html> 
