--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <main>
         <section id="home" class="hero-section">
             <div class="hero-content">
-                <h1>Welcome to McCourt Physics</h1>
+                <h1>Welcome to<br>McCourt Physics</h1>
                 
                 <div class="scientist-container">
                     <div class="scientist">
