--- a/research.html
+++ b/research.html
@@ -69,10 +69,11 @@
                     
                     <h4>2025</h4>
                     <div class="publication-item">
-                        <p class="publication-title">The Coupling of Charge Regulation and Geometry in Soft Ionizable Molecular Assemblies (2025)</p>
-                        <p class="authors">Joseph McCourt, Leticia López-Flores, Sumit Kewalramani, Noah Welke, Monica Olvera de la Cruz, Michael Bedzyk</p>
-                        <p class="journal">The Journal of Physical Chemistry B (Forthcoming)</p>
-                        <p class="manuscript">Manuscript ID: jp-2025-00162a.R1</p>
+                        <p class="publication-title">Coupling of Charge Regulation and Geometry in Soft Ionizable Molecular Assemblies</p>
+                        <p class="authors">Joseph McCourt, Leticia Lopez-Flores, Sumit Kewalramani, Noah Welke, Monica Olvera de la Cruz, Michael Bedzyk</p>
+                        <p class="journal">J Phys Chem B.</p>
+                        <p class="doi">DOI: <a href="https://doi.org/10.1021/acs.jpcb.5c00162" target="_blank">10.1021/acs.jpcb.5c00162</a></p>
+                        <p class="manuscript">PMID: 40198258</p>
                     </div>
                     
                     <div class="publication-item">
