added MLXN presentation

--- a/research.html
+++ b/research.html
@@ -77,6 +77,12 @@
                     </div>
                     
                     <div class="publication-item">
+                        <p class="publication-title">CNN-enhanced Nanostructure Characterization via Combined X-ray Ptychography and SAXS Imaging (pty-co-SAXS)</p>
+                        <p class="authors">Joseph McCourt, Junjing Deng, Byeongdu Lee, Soenke Seifert, Mathew Cherukara, Hemant Sharma, Ming Du, Zhihua Cheng, Boyu Zhang, Matthew Jones, Rachel Chan, Pedro R. Mercado Lozano</p>
+                        <p class="journal">MLXN 2025: Machine Learning for X-ray and Neutron Science: A Global 24-Hour Virtual Event, April 15th, 2025. Conference Presentation</p>
+                    </div>
+                    
+                    <div class="publication-item">
                         <p class="publication-title">Programming Defects and Cavities into Colloidal Crystals Engineered with DNA (2025)</p>
                         <p class="authors">Rachel Chan, Kaitlin Landy, Kyle Gibson, Sachin Kulkarni, Junjing Deng, Byeongdu Lee, Joseph McCourt, Soenke Seifert, Olivier Chevalier, Alexa Wong, Chaojian Chen, Peter Winegar, Koray Aydin, Chad Mirkin</p>
                         <p class="journal">Science Advances (Forthcoming)</p>
