--- a/interests.html
+++ b/interests.html
@@ -30,6 +30,23 @@
                 
                 <!-- Added April 2025 -->
                 <div class="interest-card">
+                    <a href="https://youtu.be/h7apO7q16V0?feature=shared" target="_blank" rel="noopener noreferrer">
+                        <div class="interest-thumbnail">
+                            <img src="images/interests/20210101_FFT_explained.png" alt="Fast Fourier Transform Algorithm">
+                        </div>
+                        <div class="interest-content">
+                            <h3>Fast Fourier Transform Algorithm</h3>
+                            <p class="interest-source">YouTube (Jan 2021)</p>
+                            <p class="interest-description">An excellent explanation of the Fast Fourier Transform algorithm, a fundamental computational technique used in signal processing, data analysis, and many scientific applications.</p>
+                            <span class="interest-tag">Mathematics</span>
+                            <span class="interest-tag">Algorithms</span>
+                            <span class="interest-tag">Signal Processing</span>
+                        </div>
+                    </a>
+                </div>
+                
+                <!-- Added April 2025 -->
+                <div class="interest-card">
                     <a href="http://www.mdtutorials.com/gmx/" target="_blank" rel="noopener noreferrer">
                         <div class="interest-thumbnail">
                             <img src="images/interests/20180101_gromacsMD.png" alt="GROMACS Tutorials">
