added github and adjusted home page

--- a/contact.html
+++ b/contact.html
@@ -48,6 +48,10 @@
                                 <i class="fab fa-linkedin"></i>
                                 <a href="https://www.linkedin.com/in/joseph-mccourt-4a9327124/" target="_blank" rel="noopener noreferrer">LinkedIn Profile</a>
                             </div>
+                            <div class="contact-item">
+                                <i class="fab fa-github"></i>
+                                <a href="https://github.com/jmccourt11" target="_blank" rel="noopener noreferrer">GitHub Profile</a>
+                            </div>
                         </div>
                     </div>
                 </div>
