--- a/about.html
+++ b/about.html
@@ -6,18 +6,6 @@
     <title>About - McCourt Physics</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="icon" href="images/Black_Clean_Minimalist_Circle_Monogram_Logo-removebg-preview.png" type="image/png">
-    <link rel="canonical" href="https://www.mccourtphysics.com/about.html">
-    <meta name="description" content="About Joseph McCourt — physicist specializing in X-ray physics, ptychography, soft matter, and AI-enhanced imaging.">
-    <meta property="og:title" content="About - McCourt Physics">
-    <meta property="og:description" content="About Joseph McCourt — physicist focusing on X-ray physics, ptychography, and AI imaging.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.mccourtphysics.com/about.html">
-    <meta property="og:image" content="https://www.mccourtphysics.com/images/Black_Clean_Minimalist_Circle_Monogram_Logo-removebg-preview.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="About - McCourt Physics">
-    <meta name="twitter:description" content="About Joseph McCourt — physicist specializing in modern X-ray techniques.">
-    <meta name="twitter:image" content="https://www.mccourtphysics.com/images/Black_Clean_Minimalist_Circle_Monogram_Logo-removebg-preview.png">
 </head>
 <body>
     <header>
@@ -180,6 +168,7 @@
         </ul>
     </nav>
 
+    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode" title="Toggle theme">🌓</button>
     <script src="js/main.js" defer></script>
 </body>
 </html> 
