--- a/contact.html
+++ b/contact.html
@@ -6,18 +6,6 @@
     <title>Contact - McCourt Physics</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="icon" href="images/Black_Clean_Minimalist_Circle_Monogram_Logo-removebg-preview.png" type="image/png">
-    <link rel="canonical" href="https://www.mccourtphysics.com/contact.html">
-    <meta name="description" content="Contact Joseph McCourt for collaboration, research inquiries, or speaking engagements.">
-    <meta property="og:title" content="Contact - McCourt Physics">
-    <meta property="og:description" content="Get in touch with Joseph McCourt.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.mccourtphysics.com/contact.html">
-    <meta property="og:image" content="https://www.mccourtphysics.com/images/Black_Clean_Minimalist_Circle_Monogram_Logo-removebg-preview.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Contact - McCourt Physics">
-    <meta name="twitter:description" content="Reach out for collaborations or inquiries.">
-    <meta name="twitter:image" content="https://www.mccourtphysics.com/images/Black_Clean_Minimalist_Circle_Monogram_Logo-removebg-preview.png">
 </head>
 <body>
     <header>
@@ -95,6 +83,7 @@
         </ul>
     </nav>
 
+    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode" title="Toggle theme">🌓</button>
     <script src="js/main.js" defer></script>
 </body>
 </html> 
