--- a/interests.html
+++ b/interests.html
@@ -6,18 +6,6 @@
     <title>Interests - McCourt Physics</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="icon" href="images/Black_Clean_Minimalist_Circle_Monogram_Logo-removebg-preview.png" type="image/png">
-    <link rel="canonical" href="https://www.mccourtphysics.com/interests.html">
-    <meta name="description" content="Curated links and resources: papers, videos, tutorials, and tools Joseph McCourt finds valuable.">
-    <meta property="og:title" content="Interests - McCourt Physics">
-    <meta property="og:description" content="A curated list of papers, videos, and tutorials that inspire Joseph McCourt.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.mccourtphysics.com/interests.html">
-    <meta property="og:image" content="https://www.mccourtphysics.com/images/Black_Clean_Minimalist_Circle_Monogram_Logo-removebg-preview.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Interests - McCourt Physics">
-    <meta name="twitter:description" content="Curated links, papers, and videos.">
-    <meta name="twitter:image" content="https://www.mccourtphysics.com/images/Black_Clean_Minimalist_Circle_Monogram_Logo-removebg-preview.png">
 </head>
 <body>
     <header>
@@ -169,6 +157,7 @@
         </ul>
     </nav>
 
+    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode" title="Toggle theme">🌓</button>
     <script src="js/main.js" defer></script>
 </body>
 </html> 
