--- a/research.html
+++ b/research.html
@@ -6,18 +6,6 @@
     <title>Research - McCourt Physics</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-    <link rel="icon" href="images/Black_Clean_Minimalist_Circle_Monogram_Logo-removebg-preview.png" type="image/png">
-    <link rel="canonical" href="https://www.mccourtphysics.com/research.html">
-    <meta name="description" content="Research by Joseph McCourt: X-ray physics, ptychography, SAXS, tomography, and machine learning for imaging.">
-    <meta property="og:title" content="Research - McCourt Physics">
-    <meta property="og:description" content="Explore research in X-ray physics, ptychography, SAXS, and AI-driven imaging.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.mccourtphysics.com/research.html">
-    <meta property="og:image" content="https://www.mccourtphysics.com/images/Black_Clean_Minimalist_Circle_Monogram_Logo-removebg-preview.png">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Research - McCourt Physics">
-    <meta name="twitter:description" content="Research in X-ray physics and AI imaging.">
-    <meta name="twitter:image" content="https://www.mccourtphysics.com/images/Black_Clean_Minimalist_Circle_Monogram_Logo-removebg-preview.png">
 </head>
 <body>
     <header>
@@ -196,6 +184,7 @@
         </ul>
     </nav>
 
+    <button id="theme-toggle" class="theme-toggle" aria-label="Toggle dark mode" title="Toggle theme">🌓</button>
     <script src="js/main.js" defer></script>
 </body>
 </html> 
