added doi for ACA

--- a/research.html
+++ b/research.html
@@ -100,6 +100,7 @@
                         <p class="publication-title">PtychoSAXS: Combined X-ray ptychography and SAXS imaging for nanostructure characterization (2024)</p>
                         <p class="authors">Joseph McCourt, Junjing Deng, Byeongdu Lee, Soenke Seifert</p>
                         <p class="journal">ACA 2024 Annual Meeting, 10 July 2024, Denver, CO. Conference Presentation</p>
+                        <p class="doi">DOI: <a href="https://doi.org/10.1063/4.0000440" target="_blank">10.1063/4.0000440</a></p>
                     </div>
                     
                     <h4>2023</h4>
